# tibet-cmail

./: .gitignore  pyproject.toml
src/tibet_cmail/: __init__.py  audit.py  cli.py  sealed.py
tests/: test_sealed.py
